--- a/UserHub/appsettings.json
+++ b/UserHub/appsettings.json
@@ -9,5 +9,10 @@
   "ConnectionStrings": {
     "WebConnection": "Data Source=DESKTOP-PC\\SQLEXPRESS;Initial Catalog=WebApp;Integrated Security=True;MultipleActiveResultSets=True;Trusted_Connection=True;"
   },
-  "Secret": "hnJNDrgCMiuaMVL#8XDDZpzDM!pZH5WV*4sra%pFE&9eXaaYkF"
+  "Secret": "hnJNDrgCMiuaMVL#8XDDZpzDM!pZH5WV*4sra%pFE&9eXaaYkF",
+  "EmailConfig": {
+    "EmailHost": "smtp.gmail.com",
+    "EmailUsername": "userhubservice@gmail.com",
+    "EmailPassword": "Testas123"
+  }
 }
