--- a/UserHub/appsettings.json
+++ b/UserHub/appsettings.json
@@ -11,8 +11,8 @@
   },
   "Secret": "hnJNDrgCMiuaMVL#8XDDZpzDM!pZH5WV*4sra%pFE&9eXaaYkF",
   "EmailConfig": {
-    "EmailHost": "smtp.gmail.com",
-    "EmailUsername": "userhubservice@gmail.com",
-    "EmailPassword": "Testas123"
+    "EmailHost": "smtp.ethereal.email",
+    "EmailUsername": "gardner.schuster@ethereal.email",
+    "EmailPassword": "TzHUpCZqDs7zBnn3AW"
   }
 }
