--- a/UserHub/appsettings.json
+++ b/UserHub/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "WebConnection": "Data Source=DESKTOP-PC\\SQLEXPRESS;Initial Catalog=WebApp;Integrated Security=True;MultipleActiveResultSets=True;Trusted_Connection=True;"
+    "WebConnection": "Data Source=DESKTOP-PC\\SQLEXPRESS;Initial Catalog=WebApp;Integrated Security=True;TrustServerCertificate=True; MultipleActiveResultSets=True;Trusted_Connection=True;"
   },
   "Secret": "hnJNDrgCMiuaMVL#8XDDZpzDM!pZH5WV*4sra%pFE&9eXaaYkF",
   "EmailConfig": {
